[gd_scene load_steps=10 format=2]

[ext_resource path="res://LoonyLips.gd" type="Script" id=1]
[ext_resource path="res://Resources/blackboard.jpg" type="Texture" id=2]
[ext_resource path="res://Resources/Feltpen.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Resources/blue_button12.png" type="Texture" id=4]
[ext_resource path="res://Resources/blue_button11.png" type="Texture" id=5]
[ext_resource path="res://Story.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 40
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 30
outline_size = 1
font_data = ExtResource( 3 )

[node name="LoonyLips" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RootContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 24.0
margin_top = 24.0
margin_right = -24.0
margin_bottom = -24.0
alignment = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DisplayText" type="Label" parent="RootContainer"]
margin_top = 75.0
margin_right = 976.0
margin_bottom = 475.0
rect_min_size = Vector2( 0, 400 )
custom_fonts/font = SubResource( 1 )
text = "DisplayText"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputContainer" type="HBoxContainer" parent="RootContainer"]
margin_top = 479.0
margin_right = 976.0
margin_bottom = 552.0
custom_constants/separation = 12
alignment = 1

[node name="PlayerText" type="LineEdit" parent="RootContainer/InputContainer"]
margin_right = 891.0
margin_bottom = 73.0
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerButton" type="TextureButton" parent="RootContainer/InputContainer"]
margin_left = 903.0
margin_right = 976.0
margin_bottom = 73.0
rect_min_size = Vector2( 73, 73 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="RootContainer/InputContainer/PlayerButton"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0
custom_fonts/font = SubResource( 3 )
text = "OK"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StoryBook" type="Node" parent="."]

[node name="Story0" type="Node" parent="StoryBook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "a character", "something to be searched", "a villain", "something the villain did/is doing" )
story = "At that time %s was searching for %s, but he/she wasn't aware that %s was already %s."

[node name="Story1" type="Node" parent="StoryBook"]
script = ExtResource( 6 )
prompts = PoolStringArray( "a name", "a noun", "adverb", "adjective" )
story = "Once upon a time someone called %s ate a %s flavoured sandwich which made him fell all %s inside. It was a %s day."
[connection signal="text_entered" from="RootContainer/InputContainer/PlayerText" to="." method="_on_PlayerText_text_entered"]
[connection signal="pressed" from="RootContainer/InputContainer/PlayerButton" to="." method="_on_TextureButton_pressed"]
